# blackboxopt

./: .gitignore  .pre-commit-config.yaml  3rd-party-licenses.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  data.json  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: python.yaml
architecture_decision_records/: create-evaluation-result-from-specification.md  deterministic-sorting-of-evaluations.md  random-seed-for-reference-tests.md  report-multiple-evaluations.md  torch-gpu-vs-cpu-dependency.md
blackboxopt/: __init__.py  __init__.py.orig  base.py  evaluation.py  io.py  logger.py  utils.py  utils.py.orig
blackboxopt/examples/: dask_distributed.py  multi_objective_multi_param.py
blackboxopt/optimization_loops/: dask_distributed.py  file_based_distributed.py  sequential.py  testing.py  utils.py
blackboxopt/optimizers/: bohb.py  botorch_base.py  botorch_utils.py  hyperband.py  optuna_wrapper.py  random_search.py  space_filling.py  testing.py
blackboxopt/visualizations/: to_html_patch.js  utils.py  visualizer.py
docs/: index.md
docs/examples/: dask-distributed.md  multi-objective-multi-param.md  overview.md
docs/optimization-loops/: dask-distributed.md  overview.md  sequential.md  testing.md
docs/optimizers/: bohb.md  botorch.md  space-filling.md  testing.md
htmlcov/: class_index.html  d_3042bc2655f7228a___init___py.html  d_3042bc2655f7228a_base_py.html  d_3042bc2655f7228a_evaluation_py.html  d_3042bc2655f7228a_io_py.html  d_3042bc2655f7228a_logger_py.html  d_3042bc2655f7228a_utils_py.html  d_543a4751960f570a_bohb_py.html  d_543a4751960f570a_botorch_base_py.html  d_543a4751960f570a_botorch_utils_py.html  d_543a4751960f570a_hyperband_py.html  d_543a4751960f570a_random_search_py.html  d_543a4751960f570a_space_filling_py.html  d_543a4751960f570a_testing_py.html  d_5626fc84632af203_utils_py.html  d_5626fc84632af203_visualizer_py.html  d_58a71eacde0589c1_bohb_py.html  d_58a71eacde0589c1_configuration_sampler_py.html  d_58a71eacde0589c1_hyperband_py.html  d_58a71eacde0589c1_iteration_py.html  d_58a71eacde0589c1_optimizer_py.html  d_58a71eacde0589c1_utils_py.html  d_930e7a8f3b9e4c57_dask_distributed_py.html  d_930e7a8f3b9e4c57_multi_objective_multi_param_py.html  d_b277be4049216c3f_dask_distributed_py.html  d_b277be4049216c3f_sequential_py.html  d_b277be4049216c3f_testing_py.html  d_b277be4049216c3f_utils_py.html  function_index.html  index.html  status.json  z_3042bc2655f7228a___init___py.html  z_3042bc2655f7228a_base_py.html  z_3042bc2655f7228a_evaluation_py.html  z_3042bc2655f7228a_io_py.html  z_3042bc2655f7228a_logger_py.html  z_3042bc2655f7228a_utils_py.html  z_543a4751960f570a_bohb_py.html  z_543a4751960f570a_botorch_base_py.html  z_543a4751960f570a_botorch_utils_py.html  (+19 more)
latest/: 404.html  index.html
tests/: base_test.py  evaluation_test.py  examples_test.py  io_test.py  package_test.py  utils_test.py  visualization_test.py
tests/optimization_loops/: dask_distributed_test.py  file_based_distributed_test.py  sequential_test.py
v1.0.10/: 404.html  index.html  sitemap.xml
v1.0.11/: 404.html  index.html  sitemap.xml
v1.0.2/: 404.html  index.html  sitemap.xml
v1.0.9/: 404.html  index.html  sitemap.xml
v1.1.0/: 404.html  generate_references.py  index.html  sitemap.xml
v1.1.1/: 404.html  index.html  sitemap.xml
v1.1.3/: 404.html  index.html  sitemap.xml
v2.0.0/: 404.html  index.html  sitemap.xml
v3.0.0/: 404.html  index.html  sitemap.xml
v3.0.2/: 404.html  index.html  sitemap.xml
v4.0.0/: 404.html  index.html  sitemap.xml
v4.1.0/: 404.html  index.html  sitemap.xml
v4.1.1/: 404.html  index.html  sitemap.xml
v4.10.0/: 404.html  index.html  sitemap.xml
v4.11.0/: 404.html  index.html  sitemap.xml
v4.12.0/: 404.html  index.html  sitemap.xml
v4.13.0/: 404.html  index.html  sitemap.xml
v4.13.1/: 404.html  index.html  objects.inv  sitemap.xml
v4.13.2/: 404.html  index.html  sitemap.xml
v4.14.0/: 404.html  index.html  objects.inv  sitemap.xml
v4.15.1/: 404.html  index.html  objects.inv  sitemap.xml
v4.2.0/: 404.html  index.html  sitemap.xml
v4.3.0/: 404.html  index.html  sitemap.xml
v4.3.1/: 404.html  index.html  sitemap.xml
v4.3.2/: 404.html  index.html  sitemap.xml
v4.3.3/: 404.html  index.html  sitemap.xml
v4.4.0/: 404.html  index.html  objects.inv  sitemap.xml
v4.4.2/: 404.html  extra.css  index.html  objects.inv  sitemap.xml
v4.4.3/: 404.html  index.html  sitemap.xml
v4.4.4/: 404.html  index.html  sitemap.xml
v4.4.5/: 404.html  index.html  sitemap.xml
v4.4.6/: 404.html  index.html  sitemap.xml
v4.4.7/: 404.html  index.html  objects.inv  sitemap.xml
v4.5.0/: 404.html  index.html  objects.inv  sitemap.xml
v4.5.1/: 404.html  index.html  sitemap.xml
v4.6.0/: 404.html  index.html  objects.inv  sitemap.xml
v4.6.1/: 404.html  index.html  objects.inv  sitemap.xml
v4.6.2/: 404.html  index.html  sitemap.xml
v4.6.4/: 404.html  index.html  sitemap.xml
v4.7.0/: 404.html  index.html  sitemap.xml
v4.7.1/: 404.html  index.html  sitemap.xml
v4.7.2/: 404.html  index.html  sitemap.xml
v4.8.0/: 404.html  index.html  objects.inv  sitemap.xml
v4.8.1/: 404.html  index.html  sitemap.xml
v4.8.2/: 404.html  index.html  sitemap.xml
v4.8.3/: 404.html  index.html  sitemap.xml
v4.8.4/: 404.html  index.html  sitemap.xml
v4.9.0/: 404.html  index.html  sitemap.xml
v4.9.1/: 404.html  index.html  objects.inv  sitemap.xml
v5.0.0/: 404.html  index.html  sitemap.xml
v5.0.1/: 404.html  index.html  objects.inv  sitemap.xml
v5.0.2/: 404.html  index.html  sitemap.xml
v5.0.3/: 404.html  index.html  objects.inv  sitemap.xml
v5.0.4/: 404.html  index.html  objects.inv  sitemap.xml
v5.2.0/: 404.html  index.html  objects.inv  sitemap.xml
v5.3.0/: 404.html  index.html  sitemap.xml
v5.3.1/: 404.html  index.html  sitemap.xml
v5.3.2/: 404.html  index.html  sitemap.xml
v5.3.3/: 404.html  index.html  objects.inv  sitemap.xml
v5.3.4/: 404.html  index.html  sitemap.xml
v5.3.5/: 404.html  generate_references.py  index.html  sitemap.xml
v5.3.6/: 404.html  index.html  sitemap.xml
(+1622 files in other folders)
