[tool.poetry]
name = "blackboxopt"
version = "5.3.2"
description = "A common interface for blackbox optimization algorithms along with useful helpers like parallel optimization loops, analysis and visualization scripts."
readme = "README.md"
repository = "https://github.com/boschresearch/blackboxopt"
authors = ["Bosch Center for AI, Robert Bosch GmbH"]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
parameterspace = ">=0.7.2"
plotly = {version = "^5.10.0", optional = true}
scipy = {version = "^1.14.0", optional = true}
statsmodels = {version = "^0.14.2", optional = true}
dask = {version = "^2023.1.0", optional = true}
distributed = {version = "^2023.1.0", optional = true}
pandas = {version = "^2.2.2", optional = true}
sympy = {version = "^1.12", optional = true}
torch = {version = ">=2.3", optional = true, source = "pytorch-cpu"}
botorch = {version = ">=0.7.1", optional = true}
pymoo = {version = ">=0.5,<1.0", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^7.2.0"
mypy = "^1.7"
pytest-timeout = "^2.1.0"
coverage = "^7.2.7"
mkdocs = "^1.6.1"
mkdocstrings = {version="^0.26.0", extras=["python-legacy"]}
mkdocs-material = "^9.6.7"
mkdocs-gen-files = "^0.5.0"
mkdocs-awesome-pages-plugin = "^2.10.1"
mike = "^1.1.2"
ruff = "^0.0.259"
pre-commit = "^2.18.1"
toml = "^0.10.2"
types-toml = "^0.10.7"
kaleido = "0.2.1"  # pin hard, because 0.2.1post1 fails to install

[tool.poetry.extras]
all = ["numpy", "plotly", "scipy", "statsmodels", "dask", "distributed", "pandas", "sympy", "torch", "botorch", "pymoo", "scikit-learn"]
hyperband = ["numpy"]
bohb = ["numpy", "scipy", "statsmodels"]
botorch = ["sympy", "torch", "botorch"]
space-fill = ["numpy", "scipy"]
dask = ["dask", "distributed"]
visualization = ["plotly", "scipy", "pandas", "pymoo"]
testing = ["numpy"]
examples = ["scikit-learn", "dask", "distributed"]

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true

[tool.black]
line-length = 88
# Examples should remain with line-length 80:
extend-exclude = 'blackboxopt/examples'

[tool.ruff]
# Enable pycodestyle, Pyflakes, isort
select = ["E", "F", "I"]
ignore = []
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]
line-length = 88
# Ignore unused import in __init__.py files
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.coverage.run]
source = ['blackboxopt']
relative_files = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
