[project]
name = "blackboxopt"
version = "5.3.5"
description = "A common interface for blackbox optimization algorithms along with useful helpers like parallel optimization loops, analysis and visualization scripts."
readme = "README.md"
authors = [{name = "Bosch Center for AI, Robert Bosch GmbH"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.15"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "parameterspace>=0.7.2",
]

[project.urls]
Repository = "https://github.com/boschresearch/blackboxopt"

[project.optional-dependencies]
all = [
    "numpy",
    "plotly>=5.10.0",
    "scipy>=1.14.0; python_version < '3.14'",
    "scipy>=1.16.1; python_version >= '3.14'",
    "statsmodels>=0.14.2",
    "dask>=2023.1.0",
    "distributed>=2023.1.0",
    "pandas>=2.2.2",
    "sympy>=1.12",
    "torch>=2.3",
    "botorch>=0.7.1",
    "pymoo>=0.5,<1.0",
    "scikit-learn",
]
hyperband = ["numpy"]
bohb = [
    "numpy",
    "scipy>=1.14.0; python_version < '3.14'",
    "scipy>=1.16.1; python_version >= '3.14'",
    "statsmodels>=0.14.2",
]
botorch = ["sympy>=1.12", "torch>=2.3", "botorch>=0.7.1"]
space-fill = [
    "numpy",
    "scipy>=1.14.0; python_version < '3.14'",
    "scipy>=1.16.1; python_version >= '3.14'",
]
dask = ["dask>=2023.1.0", "distributed>=2023.1.0"]
visualization = [
    "plotly>=5.10.0",
    "scipy>=1.14.0; python_version < '3.14'",
    "scipy>=1.16.1; python_version >= '3.14'",
    "pandas>=2.2.2",
    "pymoo>=0.5,<1.0",
]
testing = ["numpy"]
examples = ["scikit-learn", "dask>=2023.1.0", "distributed>=2023.1.0"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=7.2.0",
    "mypy>=1.7",
    "pytest-timeout>=2.1.0",
    "coverage>=7.2.7",
    "mkdocs>=1.6.1",
    "mkdocstrings[python-legacy]>=0.26.0",
    "mkdocs-material>=9.6.7",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mike>=1.1.2",
    "ruff>=0.0.259",
    "pre-commit>=2.18.1",
    "toml>=0.10.2",
    "types-toml>=0.10.7",
    "kaleido==0.2.1",
]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = {index = "pytorch-cpu"}

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true

[tool.black]
line-length = 88
# Examples should remain with line-length 80:
extend-exclude = 'blackboxopt/examples'

[tool.ruff]
# Enable pycodestyle, Pyflakes, isort
select = ["E", "F", "I"]
ignore = []
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]
line-length = 88
# Ignore unused import in __init__.py files
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.coverage.run]
source = ['blackboxopt']
relative_files = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
